Improved code quailtiy